--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
 </head>
 
 <body>
+    <!--
     <a id="github-ribbon" href="https://github.com/dtao/slidedown">
         <img
             style="position: fixed; top: 0; left: 0; border: 0; z-index: 1;"
-            src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png"
-            alt="Fork me on GitHub" />
+            src="pix/java.jpg"
+            alt="Java" />
     </a>
+    -->
 
     <div id="slides"></div>
 
@@ -49,6 +51,8 @@
             e.stopPropagation();
         });
     </script>
+        
+        
 </body>
 
 </html>
